k8s/app/deployment-service.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myntra
spec:
  replicas: 4
  selector:
    matchLabels:
      app: myntra
  template:
    metadata:
      labels:
        app: myntra
    spec:
      containers:
        - name: myntra
          image: 827919544150.dkr.ecr.ap-south-1.amazonaws.com/my-ecr-repofor-eks:latest
          ports:
            - containerPort: 3000  # Container ka internal port
              hostPort: 80         #  application ko direct EC2 ke Public IP par expose karega
