k8s/app/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myntra-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    # Aapki apni VPC ID aur Subnet IDs yahan set kar di hain
    alb.ingress.kubernetes.io/vpc-id: vpc-094b5f502075c40bb
    alb.ingress.kubernetes.io/subnets: subnet-0f96a20ad148151a5, subnet-01f26ac07e1a56c1e, subnet-0a03fb704c8ebe556
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myntra-service
                port:
                  number: 80
